<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cqut.edu.cn.bangke.ModifyPwdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ly_error_rpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_rpwd_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="密码不能为空"
                android:textColor="@color/error_code"
                android:textSize="13sp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@mipmap/ic_error" />
        </LinearLayout>


        <utils.ClearEditText
            android:id="@+id/et_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_et"
            android:drawableLeft="@mipmap/pwd"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/ly_error_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_auth_code_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="密码不能为空"
                android:textColor="@color/error_code"
                android:textSize="13sp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@mipmap/ic_error" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <utils.ClearEditText
                android:id="@+id/et_auth_code"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="3"
                android:background="@drawable/bg_et"
                android:gravity="center_vertical"
                android:hint="@string/code"
                android:inputType="number"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_auth_rpwd"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="@color/blue_normal"
                android:gravity="center"
                android:maxWidth="96dp"
                android:text="@string/auth_code" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_do_modify"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@color/blue_normal"
        android:gravity="center"
        android:text="修改密码" />

</LinearLayout>
