<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cqut.edu.cn.bangke.RegisterActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/phone_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="64dp">

                <utils.ClearEditText
                    android:id="@+id/et_reg_username"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_et"
                    android:drawableLeft="@mipmap/user"
                    android:hint="@string/prompt_username"
                    android:paddingLeft="8dp"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <!--<android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="64dp">

                <EditText
                    android:id="@+id/et_reg_passwd"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:drawableLeft="@mipmap/pwd"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:paddingLeft="8dp"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="64dp">

                <EditText
                    android:id="@+id/et_reg_rpwd"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:drawableLeft="@mipmap/pwd"
                    android:hint="@string/prompt_rpassword"
                    android:inputType="textPassword"
                    android:paddingLeft="8dp"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="64dp">

                <EditText
                    android:id="@+id/sex_text"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:hint="请选择你的性别"
                    android:paddingLeft="8dp"
                    android:textColor="#666666"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:weightSum="4">

                <utils.ClearEditText
                    android:id="@+id/et_auth_code"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="3"
                    android:background="@drawable/bg_et"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:hint="@string/code"
                    android:inputType="number"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" />

                <Button
                    android:id="@+id/btn_auth"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:background="@color/blue_normal"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:maxWidth="96dp"
                    android:text="@string/auth_code" />
            </LinearLayout>

            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_height="48dp"
                android:text="注册"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:background="@color/blue_normal"
                custom:pb_colorComplete="@color/green_complete"
                custom:pb_colorNormal="@color/blue_normal"
                custom:pb_colorPressed="@color/blue_pressed"
                custom:pb_colorProgress="@color/purple_progress"
                custom:pb_textComplete="Success"
                custom:pb_textProgress="Loading"
                custom:pb_textError="Error"
                custom:pb_colorError="@color/red_error" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
