<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:fresc="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cqut.edu.cn.bangke.LoginActivity">

    <!-- Login progress -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/phone_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/icon"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="36dp"
                android:src="@drawable/ic_launcher"
                fresc:actualImageScaleType="centerInside"
                fresc:roundAsCircle="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <utils.ClearEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_et"
                    android:drawableLeft="@mipmap/user"
                    android:hint="@string/prompt_username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:singleLine="true"
                    android:textSize="16sp" />


                <utils.ClearEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_et"
                    android:drawableLeft="@mipmap/pwd"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:singleLine="true"
                    android:textSize="16sp" />


                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <utils.ClearEditText
                        android:id="@+id/et_auth_code"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="3"
                        android:background="@drawable/bg_et"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:hint="@string/code"
                        android:inputType="number"
                        android:layout_marginTop="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp" />

                    <Button
                        android:id="@+id/btn_auth"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:layout_marginLeft="4dp"
                        android:background="@color/blue_normal"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:maxWidth="96dp"
                        android:text="@string/auth_code" />
                </LinearLayout>-->


                <com.dd.processbutton.iml.ActionProcessButton
                    android:id="@+id/btn_login_In"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/blue_pressed"
                    android:text="登录"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    custom:pb_colorComplete="@color/green_complete"
                    custom:pb_colorError="@color/red_error"
                    custom:pb_colorNormal="@color/blue_normal"
                    custom:pb_colorPressed="@color/blue_pressed"
                    custom:pb_colorProgress="@color/purple_progress"
                    custom:pb_textComplete="Success"
                    custom:pb_textError="Error"
                    custom:pb_textProgress="Loading" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_do_register"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_gravity="bottom|right"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:clickable="true"
                android:gravity="right|center_vertical"
                android:text="没有账号？去注册！"
                android:textSize="15sp" />

            <!--  <com.dd.processbutton.iml.ActionProcessButton
                  android:id="@+id/btn_register"
                  android:layout_width="match_parent"
                  android:layout_height="48dp"
                  android:text="注册"
                  android:textColor="@android:color/white"
                  android:textSize="18sp"
                  android:background="@color/blue_normal"
                  custom:pb_colorComplete="@color/green_complete"
                  custom:pb_colorNormal="@color/blue_normal"
                  custom:pb_colorPressed="@color/blue_pressed"
                  custom:pb_colorProgress="@color/purple_progress"
                  custom:pb_textComplete="Success"
                  custom:pb_textProgress="Loading"
                  custom:pb_textError="Error"
                  custom:pb_colorError="@color/red_error" />-->

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
